# alproj-gui

./: .gitignore  CLAUDE.md  README.md  example.py  params_to_be_set.md
.github/workflows/: release.yml
.specify/memory/: constitution.md
backend/: README.md  Untitled Project.alproj  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: __init__.py  files.py  georectify.py  jobs.py  projects.py  recovery.py
backend/app/core/: __init__.py  config.py  jobs.py  match_cache.py  model_cache.py
backend/app/models/: __init__.py  camera.py  gcp.py  project.py
backend/app/schemas/: __init__.py  camera.py  gcp.py  georectify.py  job.py  project.py
backend/app/services/: __init__.py  exif.py  georectify.py  model_manager.py  project_io.py  raster.py  recovery.py  report.py
backend/scripts/: download_models.py
backend/tests/: test_cors_preflight.py  test_model_cache_ssl.py
docs/: README.md  error-fixes.md  tutorial.md
frontend/: .prettierignore  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/components/: LanguageSwitcher.svelte
frontend/src/lib/components/ImageViewer/: ImageCompare.svelte  ImagePreview.svelte  SimulationPreview.svelte  index.ts
frontend/src/lib/components/Map/: CameraMarker.svelte  FovCone.svelte  GcpOverlay.svelte  MapView.svelte  RasterOverlay.svelte  index.ts
frontend/src/lib/components/common/: AdvancedSettings.svelte  Button.svelte  CameraParamsForm.svelte  Card.svelte  ExportForm.svelte  FileSelect.svelte  GcpTable.svelte  Loading.svelte  MetricsDisplay.svelte  ProcessLog.svelte  ProgressBar.svelte  RecoveryDialog.svelte  index.ts
frontend/src/lib/i18n/: en.json  index.ts  ja.json
frontend/src/lib/services/: api.ts  file-dialog.ts  websocket.ts
frontend/src/lib/stores/: index.ts  project.ts  wizard.ts
frontend/src/lib/types/: index.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/georectify/: +layout.svelte  +page.svelte
frontend/src/routes/georectify/steps/camera-setup/: +page.svelte
frontend/src/routes/georectify/steps/data-input/: +page.svelte
frontend/src/routes/georectify/steps/export/: +page.svelte
frontend/src/routes/georectify/steps/processing/: +page.svelte
frontend/src/routes/georectify/steps/result/: +page.svelte
packaging/flatpak/: com.alproj.gui.desktop  com.alproj.gui.metainfo.xml  com.alproj.gui.yml
packaging/linux/: README-linux.md  install.sh  uninstall.sh
scripts/: build-sidecar.sh  dev.sh  generate-icons.sh
specs/001-georectification/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-georectification/checklists/: requirements.md
specs/001-georectification/contracts/: openapi.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
