[package]
name = "alproj-gui"
version = "0.1.0"
description = "ALPROJ GUI - Mountain photo georectification tool"
authors = ["ALPROJ Team"]
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "alproj_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["time", "sync"] }
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
env_logger = "0.11"
sysinfo = "0.32"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
